--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "4.3.0",
     "cross-env": "^7.0.2",
     "dayjs": "1.8.28",
+    "echarts": "^5.2.2",
     "esm": "^3.2.25",
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
