--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "browser": {
     "fs": false,
